[package]
name = "ApacheLogAnonymizer"
version = "0.1.0"
authors = ["Brolf <brolf@magheute.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "~1.3.9"
lazy_static = "~1.4.0"
clap = "~2.33.3"

[profile.release]
# opt-level = "s"  # for small binary
opt-level = 3  # for fast binary
lto = true
codegen-units = 1