[package]
name = "ApacheLogAnonymizer"
version = "0.1.0"
authors = ["Olaf Pichler <olaf.pichler@urz.uni-heidelberg.de>"]
edition = "2018"
license = "EUPL-1.2"
description = "Anonymizes web server logs for long term storage in compliance with the GDPR."
homepage = "https://github.com/br-olf/ApacheLogAnonymizer"
repository = "https://gitlab.urz.uni-heidelberg.de/PichlerOlaf/ApacheLogAnonymizer"
readme = "README.md"
keywords = ["gdpr", "webserver", "log", "anonymization"]
categories = ["command-line-utilities", "text-processing", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "~1.3.9"
lazy_static = "~1.4.0"
clap = "~2.33.3"

[profile.release]
# opt-level = "s"  # for small binary
opt-level = 3  # for fast binary
lto = true
codegen-units = 1